# otus_open_webinars

./: .gitignore
dynamic_memory/: 01_strategy.hpp  02_dangling_ref.cpp  03_lifetime.cpp  04_new_delete_usage.cpp  04_raw_pointer.cpp  05_memory_leak_san.cpp  05_memory_leak_valgrind.cpp  05_out_of_bounds.cpp  05_use_after_free.cpp  05_use_after_return_scope.cpp  06_memory_leak_fixed.cpp  07_smart_ptr.hpp  07_smart_ptr_example.cpp  CMakeLists.txt
googletest_boost/: Dockerfile
googletest_boost/boost_examples/: CMakeLists.txt  build_boost.sh
googletest_boost/boost_examples/src/: list.hpp
googletest_boost/boost_examples/test/: test_fixture.cpp  test_list.cpp  test_one.cpp  test_params.cpp  test_second.cpp
googletest_boost/coverage/: CMakeLists.txt  generate_coverage.sh
googletest_boost/coverage/src/: RotatedStack.cpp  RotatedStack.h  function.cpp
googletest_boost/coverage/test/: test_stack.cpp
googletest_boost/gtest_examples/: CMakeLists.txt
googletest_boost/gtest_examples/src/: list.hpp
googletest_boost/gtest_examples/test/: test_assertions.cpp  test_fixtures.cpp  test_params.cpp
googletest_boost/project_gtest_by_cmake_fetchcontent/: CMakeLists.txt
googletest_boost/project_prebuilt_gtest/: CMakeLists.txt  install_prebuild_gtest.sh
googletest_boost/project_prebuilt_gtest/test/: test_list.cpp
googletest_boost/project_with_gtest/: CMakeLists.txt
googletest_boost/project_with_gtest/src/: list.hpp
how_to_make_smart_ptr/: 01_lifetime.cpp  02_raw_pointer.cpp  05_unique_ptr.cpp  CMakeLists.txt
module_linker/: CMakeLists.txt
module_linker/compilation/: CMakeLists.txt  compilation.cpp  compilation.i  compilation.s
module_linker/compilation_with_headers/: CMakeLists.txt  compilation_with_headers.cpp  constants.h  functions.cpp  functions.h
module_linker/dynamic_library_example/: CMakeLists.txt
module_linker/dynamic_library_example/dynamic_library/: calculation.cpp
module_linker/static_library_example/: CMakeLists.txt  static_library_usage.cpp
unique_ptr/: 03_smart_ptr.cpp  04_auto_ptr.cpp  05_unique_ptr.cpp  06_move.cpp
